bk_ida/gobmkida/c1/result_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/result_to_string/src/engine/printutils.c:859:27: error: use of undeclared identifier 'off_48A728'
return ( const char *)*( &off_48A728 + result); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/result_to_string/src/obj/1/printutils.o] Error 1
